05-application/gke-yaml/tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    app: tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: gcr.io/p-khm8-dev-svc/tomcat-with-jdbc:latest  # 커스텀 이미지 사용
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/local/tomcat/webapps
              name: tomcat-webapps
        - name: alloydb-auth-proxy
          image: gcr.io/alloydb-connectors/alloydb-auth-proxy:latest
          command:
            - "/alloydb-auth-proxy"
          args:
            - "projects/p-khm8-dev-svc/locations/asia-northeast3/clusters/dev-alloydb-cluster/instances/dev-alloydb-intance"
          securityContext:
            runAsUser: 2
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
      volumes:
        - name: tomcat-webapps
          emptyDir: {}
        - name: dbcheck-config
          configMap:
            name: dbcheck-config
